--- a/template.toml
+++ b/template.toml
@@ -8,7 +8,7 @@ additional_files = [ ]
 [initial]
 description = "<<df_organism>>; <<df_protein_name>>"
 date = "<<today>>"
-lead_contributor_orcid = "0009-0000-9558-8561"
+lead_contributor_orcid = "<<df_orcid>>"
 
 [water]
 is_present = false
@@ -22,7 +22,7 @@ molecule_id = "<<df_UniProt>>"
 name = "ATLAS"
 
 [[papers]]
-title = "ATLAS: protein flexibility description from atomistic molecular dynamics simulations "
+title = "ATLAS: protein flexibility description from atomistic molecular dynamics simulations"
 authors = "Yann Vander Meersche, Gabriel Cretin, Aria Gheeraert, Jean-Christophe Gelly, Tatiana Galochkina"
 journal = "Nucleic Acids Research"
 year = 2_023
@@ -35,3 +35,18 @@ doi = "1093"
 trajectory_file_name = "<<df_PDB_prod>>.xtc"
 structure_file_name = "<<df_PDB_prod>>.tpr"
 topology_file_name = "<<df_PDB>>.top"
+
+[[additional_files]]
+additional_file_type = "Checkpoint"
+additional_file_name = "<<df_PDB_prod>>.cpt"
+additional_file_description = "Last GROMACS checkpoint of the simulation"
+
+[[additional_files]]
+additional_file_type = "Structure"
+additional_file_name = "<<df_PDB>>_prod_start.gro"
+additional_file_description = "GROMACS structure file of the 1st MD frame (after minimisation)"
+
+[[additional_files]]
+additional_file_type = "Structure"
+additional_file_name = "<<df_PDB_prod>>_end.gro"
+additional_file_description = "GROMACS structure file of the last MD frame of each replicate for easy MD prolongation"
